Fix notification scroll overflow

--- a/src/components/NotificationBell/styles.module.scss
+++ b/src/components/NotificationBell/styles.module.scss
@@ -33,6 +33,7 @@
   right: 0;
   top: 0;
   background: #161A25;
+  overflow: auto;
 }
 
 .notificationMessageContainer {
